forth/test/fail/test_local_assignment_non_ident.af
\ Must fail to compile.
fun: .test_local_assignment_non_ident { val -- err }
  val { tmp.name }
end
